--- a/po/sv.po
+++ b/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: graphs\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-01 13:12+0200\n"
+"POT-Creation-Date: 2023-06-01 13:18+0200\n"
 "PO-Revision-Date: 2023-04-17 18:28+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -2540,3 +2540,7 @@ msgstr ""
 #: src/ui.py:109
 msgid "Text Files"
 msgstr ""
+
+#: src/ui.py:128
+msgid "translator-credits"
+msgstr "Sjoerd Stendahl <contact@sjoerd.se>"
